--- a/src/app.css
+++ b/src/app.css
@@ -1,108 +1,259 @@
-@import '@fontsource/fira-mono';
 
-:root {
-	font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	--font-mono: 'Fira Mono', monospace;
-	--pure-white: #ffffff;
-	--primary-color: #b9c6d2;
-	--secondary-color: #d0dde9;
-	--tertiary-color: #edf0f8;
-	--accent-color: #ff3e00;
-	--heading-color: rgba(0, 0, 0, 0.7);
-	--text-color: #444444;
-	--background-without-opacity: rgba(255, 255, 255, 0.7);
-	--column-width: 42rem;
-	--column-margin-top: 4rem;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: sans-serif;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -ms-overflow-style: scrollbar;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+@-ms-viewport {
+  width: device-width;
 }
 
 body {
-	min-height: 100vh;
-	margin: 0;
-	background-color: var(--primary-color);
-	background: linear-gradient(
-		180deg,
-		var(--primary-color) 0%,
-		var(--secondary-color) 10.45%,
-		var(--tertiary-color) 41.35%
-	);
+  font-family: Roboto, "Helvetica Neue", Arial, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  font-style: normal;
+  font-weight: 300; 
+  font-size: 16px;
+  color: #212529;
+  line-height: 1.4;
+  margin: 0px;
+  padding: 0px;  
+  overflow-wrap: break-word;  
+  word-wrap: break-word;
+  background-color: rgb(250, 250, 250);
+} 
+
+/* *******************
+Footer
+******************** */
+
+
+footer {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
-body::before {
-	content: '';
-	width: 80vw;
-	height: 100vh;
-	position: absolute;
-	top: 0;
-	left: 10vw;
-	z-index: -1;
-	background: radial-gradient(
-		50% 50% at 50% 50%,
-		var(--pure-white) 0%,
-		rgba(255, 255, 255, 0) 100%
-	);
-	opacity: 0.05;
+.list-unstyled {
+  padding-left: 0px;
+  list-style: none  
 }
 
-#svelte {
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
+/* *******************
+DIVs and Elements
+******************** */
+
+.content-centered {
+  justify-content: center !important;
 }
 
-h1,
-h2,
-p {
-	font-weight: 400;
-	color: var(--heading-color);
+.content-even {
+  justify-content: space-evenly !important;
 }
 
-p {
-	line-height: 1.5;
+.content-left {
+  justify-content: flex-start !important;
+  align-items: flex-start !important;
 }
 
-a {
-	color: var(--accent-color);
-	text-decoration: none;
+.content-right {
+  justify-content: flex-end !important;
+  align-items: flex-end !important;
 }
 
-a:hover {
-	text-decoration: underline;
+.cc-bg-cover {
+   background-size: cover; 
+   -ms-background-size: cover; 
+   -o-background-size: cover; 
+   -moz-background-size: cover; 
+   -webkit-background-size: cover; 
+}
+
+::-webkit-scrollbar{
+  height: 8px;
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb:horizontal{
+  background: #c0c0c0;
+  border-radius: 10px;
+}
+
+.followme-link {
+  vertical-align: middle;
+}
+
+.followme-link::before {
+  content: "\f0a9 ";
+  font-family: "Font Awesome 5 Free"; 
+  font-weight: 900;
+  margin-right: 0.3rem; 
+}
+
+/* *******************
+Std HTML elements 
+******************** */
+
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
 }
 
 h1 {
-	font-size: 2rem;
-	margin-bottom: 0 0 1em 0;
-	text-align: center;
+  font-size: 2.0 rem;  
+  font-weight: 290;
+  line-height: 1.3;
+  text-align: left;
 }
 
 h2 {
-	font-size: 1rem;
+  width: 100%;
+  margin: 2rem 0;
+  align-self: center;
+ /*  border-bottom: solid 1px rgba(0, 0, 0, 0.3); */
+  color: rgb(80, 80, 80);
+  font-size: 2rem;
+  font-weight: 400;
+  line-height: 1.5;
+  text-transform: uppercase;
 }
 
-pre {
-	font-size: 16px;
-	font-family: var(--font-mono);
-	background-color: rgba(255, 255, 255, 0.45);
-	border-radius: 3px;
-	box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
-	padding: 0.5em;
-	overflow-x: auto;
-	color: var(--text-color);
+h3 {
+  color: rgb(80, 80, 80); 
+  font-size: 1rem;
+  font-weight: 450;  
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
 }
 
-input,
-button {
-	font-size: inherit;
-	font-family: inherit;
+h4 {
+  color: rgb(50, 50, 50);  
+  font-size: 1.3rem;  
+  font-weight: 400;  
+  letter-spacing: 0px;
 }
 
-button:focus:not(:focus-visible) {
-	outline: none;
+abbr[title],
+abbr[data-original-title] {
+  text-decoration: underline;
+  -webkit-text-decoration: underline dotted;
+  text-decoration: underline dotted;
+  cursor: help;
+  border-bottom: 0;
 }
 
-@media (min-width: 720px) {
-	h1 {
-		font-size: 2.4rem;
-	}
+address {
+  margin-bottom: 1rem;
+  font-style: normal;
+  line-height: inherit;
+}
+
+ol,
+ul,
+dl {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+ol ol,
+ul ul,
+ol ul,
+ul ol {
+  margin-bottom: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  background-color: transparent;
+  -webkit-text-decoration-skip: objects;
+}
+
+a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:not([href]):not([tabindex]) {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:not([href]):not([tabindex]):focus {
+  outline: 0;
+}
+
+img {
+  vertical-align: middle;
+  border-style: none;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  color: rgb(50, 50, 50);  
+  font-size: 1rem;  
+  font-weight: 400;  
+  letter-spacing: 0px;
+  line-height: 1.5;
+  text-align: justify;
+  -moz-hyphens: auto;
+  -o-hyphens: auto;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto; 
+}
+
+p a {
+ color: rgb(56,126, 182);
+} 
+
+p a::before {
+  content: "\f0a9 ";
+  font-family: "Font Awesome 5 Free"; 
+  font-weight: 900;
+  margin-right: 0.3rem; 
+}
+
+
+/* *******************
+Backgrounds and Colors 
+******************** */
+
+
+.text-centered {
+  text-align: center;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-white {
+  color: rgb(255, 255, 255);
+}
+
+.text-hide {
+  font: 0px/0 a;
+  color: transparent;
+  text-shadow: none;
+  background-color: transparent;
+  border-width: 0px;
+  border-style: initial;
+  border-color: initial;
 }
