--- a/src/app.css
+++ b/src/app.css
@@ -19,23 +19,23 @@ html {
 }
 
 body {
-  font-family: Roboto, "Helvetica Neue", Arial, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  font-family: Roboto, 'Helvetica Neue', Arial, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', sans-serif;
   font-style: normal;
-  font-weight: 300; 
+  font-weight: 300;
   font-size: 16px;
   color: #212529;
   line-height: 1.4;
   margin: 0px;
-  padding: 0px;  
-  overflow-wrap: break-word;  
+  padding: 0px;
+  overflow-wrap: break-word;
   word-wrap: break-word;
   background-color: rgb(250, 250, 250);
-} 
+}
 
 /* *******************
 Footer
 ******************** */
-
 
 footer {
   background-color: rgba(0, 0, 0, 0.8);
@@ -43,7 +43,7 @@ footer {
 
 .list-unstyled {
   padding-left: 0px;
-  list-style: none  
+  list-style: none;
 }
 
 /* *******************
@@ -69,19 +69,19 @@ DIVs and Elements
 }
 
 .cc-bg-cover {
-   background-size: cover; 
-   -ms-background-size: cover; 
-   -o-background-size: cover; 
-   -moz-background-size: cover; 
-   -webkit-background-size: cover; 
+  background-size: cover;
+  -ms-background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   height: 8px;
   width: 8px;
 }
 
-::-webkit-scrollbar-thumb:horizontal{
+::-webkit-scrollbar-thumb:horizontal {
   background: #c0c0c0;
   border-radius: 10px;
 }
@@ -91,23 +91,28 @@ DIVs and Elements
 }
 
 .followme-link::before {
-  content: "\f0a9 ";
-  font-family: "Font Awesome 5 Free"; 
+  content: '\f0a9 ';
+  font-family: 'Font Awesome 5 Free';
   font-weight: 900;
-  margin-right: 0.3rem; 
+  margin-right: 0.3rem;
 }
 
 /* *******************
 Std HTML elements 
 ******************** */
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-top: 0;
   margin-bottom: 0.5rem;
 }
 
 h1 {
-  font-size: 2.0 rem;  
+  font-size: 2 rem;
   font-weight: 290;
   line-height: 1.3;
   text-align: left;
@@ -117,7 +122,7 @@ h2 {
   width: 100%;
   margin: 2rem 0;
   align-self: center;
- /*  border-bottom: solid 1px rgba(0, 0, 0, 0.3); */
+  /*  border-bottom: solid 1px rgba(0, 0, 0, 0.3); */
   color: rgb(80, 80, 80);
   font-size: 2rem;
   font-weight: 400;
@@ -126,17 +131,17 @@ h2 {
 }
 
 h3 {
-  color: rgb(80, 80, 80); 
+  color: rgb(80, 80, 80);
   font-size: 1rem;
-  font-weight: 450;  
+  font-weight: 450;
   letter-spacing: 0.1rem;
   text-transform: uppercase;
 }
 
 h4 {
-  color: rgb(50, 50, 50);  
-  font-size: 1.3rem;  
-  font-weight: 400;  
+  color: rgb(50, 50, 50);
+  font-size: 1.3rem;
+  font-weight: 400;
   letter-spacing: 0px;
 }
 
@@ -186,7 +191,8 @@ a:not([href]):not([tabindex]) {
   text-decoration: none;
 }
 
-a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
+a:not([href]):not([tabindex]):hover,
+a:not([href]):not([tabindex]):focus {
   color: inherit;
   text-decoration: none;
 }
@@ -203,9 +209,9 @@ img {
 p {
   margin-top: 0;
   margin-bottom: 1rem;
-  color: rgb(50, 50, 50);  
-  font-size: 1rem;  
-  font-weight: 400;  
+  color: rgb(50, 50, 50);
+  font-size: 1rem;
+  font-weight: 400;
   letter-spacing: 0px;
   line-height: 1.5;
   text-align: justify;
@@ -213,25 +219,23 @@ p {
   -o-hyphens: auto;
   -webkit-hyphens: auto;
   -ms-hyphens: auto;
-  hyphens: auto; 
+  hyphens: auto;
 }
 
 p a {
- color: rgb(56,126, 182);
-} 
-
-p a::before {
-  content: "\f0a9 ";
-  font-family: "Font Awesome 5 Free"; 
-  font-weight: 900;
-  margin-right: 0.3rem; 
+  color: rgb(56, 126, 182);
 }
 
+p a::before {
+  content: '\f0a9 ';
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  margin-right: 0.3rem;
+}
 
 /* *******************
 Backgrounds and Colors 
 ******************** */
-
 
 .text-centered {
   text-align: center;
